--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -20,9 +20,9 @@ jobs:
 
       - name: docker build indexing
         run: |
-          docker build . -t atomholo/indexing:1.0
+          docker build . -t atomholo/indexing:latest
           
       - name: docker push
         run:
-          docker push atomholo/indexing:1.0
+          docker push atomholo/indexing:latest
           
